standalone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-server
  namespace: my-project
  labels: 
    app: rabbitmq-server
spec:
  selector:
    app: rabbitmq-server
  type: ClusterIP
  ports:
  - name: http
    port: 5672
    targetPort: 5672
  - name: ui
    port: 15672
    targetPort: 15672
    protocol: TCP
