standalone/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: rabbitmq-server
  namespace: my-project
spec:
  tls:
    - hosts:
        - my-project-rabbitmq-server-ui.site.com
      secretName: site.com
  rules:
    - host: my-project-rabbitmq-server-ui.site.com
      http:
        paths:
          - path: /
            backend:
              serviceName: rabbitmq-server
              servicePort: 15672
